# Spotify_Playlists_to_Youtube_Music

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: authentication_issue.md  bug_report.md  feature_request.md
src/: main.py
