[project]
name = "spotify-playlists-to-youtube-music"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "browser-cookie3>=0.20.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "spotipy>=2.25.1",
    "ytmusicapi>=1.10.3",
]
